--- a/index.html
+++ b/index.html
@@ -114,9 +114,12 @@
             <div class="pop-up__container">
               <h2 class="pop-up__title">Редактировать профиль</h2>
                 <!-- field -->
-                <fieldset class="pop-up__container_field">
-                  <input type="text" class="pop-up__container_field_name-edit" placeholder="Жак-Ив Кусто">
-                  <input type="text" class="pop-up__container_field_description-edit" placeholder="Исследователь океана">
+                <fieldset class="pop-up__field">
+                  <input type="text" class="pop-up__name-edit" placeholder="Жак-Ив Кусто">
+                  <input type="text" class="pop-up__description-edit" placeholder="Исследователь океана">
+                  <!-- <fieldset class="pop-up__container_field"> -->
+                  <!-- <input type="text" class="pop-up__container_field_name-edit" placeholder="Жак-Ив Кусто">
+                  <input type="text" class="pop-up__container_field_description-edit" placeholder="Исследователь океана"> -->
                 </fieldset>
                 <!-- save-button -->
                 <button class="button button_pop-up_save-button">Сохранить</button>
