После второй сквозной проверки

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__description">Исследователь океана</p>
           <!-- edit-button изменено -->
-          <button class="button button__edit-button" type="button"></button>
+          <button class="button button_type_edit-button" type="button"></button>
         </div>
         <!-- add-button изменено -->
-        <button class="button button__add-button" type="button"></button>
+        <button class="button button_type_add-button" type="button"></button>
       </section>
       <!-- /PROFILE -->
 
@@ -45,7 +45,7 @@
           <li class="element__items">
             <h2 class="element__title">Trappist-1C</h2>
             <!-- like-button изменено-->
-            <button class="button button__like-button" type="button"></button>
+            <button class="button button_type_like-button" type="button"></button>
           </li>
         </ul>
         <!-- Trappist-1H -->
@@ -54,7 +54,7 @@
           <li class="element__items">
             <h2 class="element__title">Trappist-1H</h2>
             <!-- like-button изменено-->
-            <button class="button button__like-button" type="button"></button>
+            <button class="button button_type_like-button" type="button"></button>
           </li>
         </ul>
         <!-- Trappist-1E -->
@@ -63,7 +63,7 @@
           <li class="element__items">
             <h2 class="element__title">Trappist-1E</h2>
             <!-- like-button изменено-->
-            <button class="button button__like-button" type="button"></button>
+            <button class="button button_type_like-button" type="button"></button>
           </li>
         </ul>
         <!-- HD 219134 B -->
@@ -72,7 +72,7 @@
           <li class="element__items">
             <h2 class="element__title">HD&nbsp;219134&nbsp;B</h2>
             <!-- like-button изменено-->
-            <button class="button button__like-button" type="button"></button>
+            <button class="button button_type_like-button" type="button"></button>
           </li>
         </ul>
         <!-- Gliese 436-B -->
@@ -81,7 +81,7 @@
           <li class="element__items">
             <h2 class="element__title">Gliese 436-B</h2>
             <!-- like-button изменено-->
-            <button class="button button__like-button" type="button"></button>
+            <button class="button button_type_like-button" type="button"></button>
           </li>
         </ul>
         <!-- Proxima Centauri B -->
@@ -90,7 +90,7 @@
           <li class="element__items">
             <h2 class="element__title">Proxima Centauri&nbsp;B</h2>
             <!-- like-button изменено-->
-            <button class="button button__like-button" type="button"></button>
+            <button class="button button_type_like-button" type="button"></button>
           </li>
         </ul>
       </section>
@@ -104,11 +104,11 @@
     <!-- /FOOTER -->
 
     <!-- POP-UP изменено-->
-      <section class="pop-up pop-up__overlay">
+      <section class="pop-up pop-up_overlay">
         <!-- container изменено -->
           <div class="pop-up__container">
             <!-- close-button изменено -->
-            <button class="button button__close-button" type="button"></button>
+            <button class="button button_type_close-button" type="button"></button>
             <h3 class="pop-up__title">Редактировать профиль</h3>
             <!-- form изменено -->
             <form class="pop-up__form" name="pop-up-form">
@@ -117,7 +117,7 @@
                 <input type="text" class="pop-up__edit pop-up__description-edit" placeholder="Исследователь океана" name="description-edit">
                 </fieldset>
               <!-- save-button изменено -->
-              <button class="button button__save-button" type="submit">Сохранить</button>
+              <button class="button button_type_save-button" type="submit">Сохранить</button>
             </form>
           </div>  
       </section>
