Перед ревью и после сковзн.проврки

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__description">Исследователь океана</p>
           <!-- edit-button изменено -->
-          <button class="button button_type_edit-button button__opacity" type="button"></button>
+          <button class="button button_type_edit-button button_opacity" type="button"></button>
         </div>
         <!-- add-button изменено -->
-        <button class="button button_type_add-button button__opacity" type="button"></button>
+        <button class="button button_type_add-button button_opacity" type="button"></button>
       </section>
       <!-- /PROFILE -->
 
@@ -49,7 +49,7 @@
           <img class="element__img" src="./images/image-2.jpg" alt="изображение-2" />
           <div class="element__items">
             <h2 class="element__title">Trappist-1H</h2>
-            <!-- like-button изменено-->
+            <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
         </div>
@@ -58,7 +58,7 @@
           <img class="element__img" src="./images/image-3.jpg" alt="изображение-3" />
           <div class="element__items">
             <h2 class="element__title">Trappist-1E</h2>
-            <!-- like-button изменено-->
+            <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <img class="element__img" src="./images/image-4.jpg" alt="изображение-4" />
           <div class="element__items">
             <h2 class="element__title">HD&nbsp;219134&nbsp;B</h2>
-            <!-- like-button изменено-->
+            <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <img class="element__img" src="./images/image-5.jpg" alt="изображение-5" />
           <div class="element__items">
             <h2 class="element__title">Gliese 436-B</h2>
-            <!-- like-button изменено-->
+            <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
         </div>
@@ -85,7 +85,7 @@
           <img class="element__img" src="./images/image-6.jpg" alt="изображение-6" />
           <div class="element__items">
             <h2 class="element__title">Proxima Centauri&nbsp;B</h2>
-            <!-- like-button изменено-->
+            <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
         </div>
@@ -104,7 +104,7 @@
       <!-- container -->
       <div class="pop-up__container">
         <!-- close-button изменено -->
-        <button class="button button_type_close-button button__opacity" type="button"></button>
+        <button class="button button_type_close-button button_opacity" type="button"></button>
         <h3 class="pop-up__title">Редактировать профиль</h3>
         <!-- form -->
         <form class="pop-up__form" name="pop-up-form">
