--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__description">Исследователь океана</p>
-          <!-- edit-button изменено -->
-          <button class="button button_type_edit-button button_opacity" type="button"></button>
+          <!-- edit-button -->
+          <button class="button button_type_edit-button" type="button"></button>
         </div>
-        <!-- add-button изменено -->
-        <button class="button button_type_add-button button_opacity" type="button"></button>
+        <!-- add-button -->
+        <button class="button button_type_add-button" type="button"></button>
       </section>
       <!-- /PROFILE -->
 
@@ -39,7 +39,7 @@
         <div class="element">
           <img class="element__img" src="./images/image-1.jpg" alt="изображение-1" />
           <div class="element__items">
-            <h2 class="element__title">Trappist-1C</h2>
+            <h2 class="element__title">Две девушки</h2>
             <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
@@ -48,7 +48,7 @@
         <div class="element">
           <img class="element__img" src="./images/image-2.jpg" alt="изображение-2" />
           <div class="element__items">
-            <h2 class="element__title">Trappist-1H</h2>
+            <h2 class="element__title">Многоручка</h2>
             <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
@@ -57,7 +57,7 @@
         <div class="element">
           <img class="element__img" src="./images/image-3.jpg" alt="изображение-3" />
           <div class="element__items">
-            <h2 class="element__title">Trappist-1E</h2>
+            <h2 class="element__title">Большая шляпа</h2>
             <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
@@ -66,7 +66,7 @@
         <div class="element">
           <img class="element__img" src="./images/image-4.jpg" alt="изображение-4" />
           <div class="element__items">
-            <h2 class="element__title">HD&nbsp;219134&nbsp;B</h2>
+            <h2 class="element__title">Белая роза в руках</h2>
             <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
@@ -75,7 +75,7 @@
         <div class="element">
           <img class="element__img" src="./images/image-5.jpg" alt="изображение-5" />
           <div class="element__items">
-            <h2 class="element__title">Gliese 436-B</h2>
+            <h2 class="element__title">Девушка</h2>
             <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
@@ -84,7 +84,7 @@
         <div class="element">
           <img class="element__img" src="./images/image-6.jpg" alt="изображение-6" />
           <div class="element__items">
-            <h2 class="element__title">Proxima Centauri&nbsp;B</h2>
+            <h2 class="element__title">Девушка в мишуре</h2>
             <!-- like-button -->
             <button class="button button_type_like-button" type="button"></button>
           </div>
@@ -103,9 +103,9 @@
     <section class="pop-up pop-up_type_overlay">
       <!-- container -->
       <div class="pop-up__container">
-        <!-- close-button изменено -->
-        <button class="button button_type_close-button button_opacity" type="button"></button>
-        <h3 class="pop-up__title">Редактировать профиль</h3>
+        <!-- close-button -->
+        <button class="button button_type_close-button" type="button"></button>
+        <p class="pop-up__title">Редактировать профиль</p>
         <!-- form -->
         <form class="pop-up__form" name="pop-up-form">
           <fieldset class="pop-up__field">
