После второй сквозной проверки

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <input type="text" class="pop-up__edit pop-up__edit_type_name" placeholder="Имя" name="name-edit">
             <input type="text" class="pop-up__edit pop-up__edit_type_description" placeholder="Описание" name="description-edit">
           </fieldset>
-          <button class="button button__style button_type_save-button" type="submit">Сохранить</button>
+          <button class="button button_style button_type_save-button" type="submit">Сохранить</button>
         </form>
       </div>
     </section>
@@ -72,7 +72,7 @@
             <input type="text" class="pop-up__edit pop-up__edit_type_img-name" placeholder="Название" name="img-name">
             <input type="url" class="pop-up__edit pop-up__edit_type_link" placeholder="Ссылка на картинку" name="link">
           </fieldset>
-          <button class="button button__style button_type_create-button" type="submit">Создать</button>
+          <button class="button button_style button_type_create-button" type="submit">Создать</button>
         </form>
       </div>
     </section>
